--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
   "bugs": {
     "url": "https://github.com/yourusername/knowledge-base-platform/issues"
   },
-  "homepage": "https://github.com/yourusername/knowledge-base-platform#readme"
+  "homepage": "https://github.com/yourusername/knowledge-base-platform#readme",
+  "dependencies": {
+    "axios": "^1.11.0"
+  }
 }
